# chat-service

./: .env.example  .gitignore  README.md  chat_schema.sql  docker-compose.yml  init_database.sh  test_data.sql
backend/: CMakeLists.txt
backend/config/: .env.example
backend/docker/: Dockerfile
backend/include/: config.h  database_manager.h  message_types.h  websocket_server.h
backend/src/: auth_validator.cpp  database_manager.cpp  main.cpp  message_handler.cpp  redis_client.cpp  room_manager.cpp  websocket_server.cpp
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: ChatArea.tsx  ChatInterface.tsx  ChatSidebar.tsx  ErrorScreen.tsx  LoadingScreen.tsx  MessageSendAnimation.tsx  WebSocketService.tsx
frontend/src/styles/: App.css
frontend/src/styles/base/: animations.css  reset.css  variables.css
frontend/src/styles/components/: ChatArea.css  ChatInterface.css  ChatSidebar.css  ErrorScreen.css  LoadingScreen.css
frontend/src/styles/effects/: glass-morphism.css  liquid-effects.css
frontend/src/utils/: WebSocketService.ts  auth.ts
